repo interfaces automappper

--- a/CityInfo.API/appsettings.Development.json
+++ b/CityInfo.API/appsettings.Development.json
@@ -4,5 +4,8 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    "CityInfoContext": "Server=(localdb)\\mssqllocaldb;Database=CityInfo.Data;Trusted_Connection=True;MultipleActiveResultSets=true"
   }
 }
