--- a/CityInfo.API/appsettings.json
+++ b/CityInfo.API/appsettings.json
@@ -5,5 +5,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "mailSettings": {
+    "mailToAddress": "developer@mycompany.com",
+    "mailFromAddress": "noreply@company.com"
+  },
   "AllowedHosts": "*"
+  
 }
