--- a/CityInfo.API/appsettings.Development.json
+++ b/CityInfo.API/appsettings.Development.json
@@ -2,10 +2,17 @@
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Microsoft.AspNetCore": "Warning",
+      "Microsoft.EntityFrameworkCore.Database.Command":  "Information"
+
     }
   },
   "ConnectionStrings": {
     "CityInfoContext": "Server=(localdb)\\mssqllocaldb;Database=CityInfo.Data;Trusted_Connection=True;MultipleActiveResultSets=true"
+  },
+  "Authentication": {
+    "SecretForKey": "thisisthesecretforgeneratingakey(mustbeatleast32bitlong)",
+    "Issuer": "https://localhost:7058",
+    "Audience": "cityinfoapi"
   }
 }
